--- a/frontend/src/containers/CourseScreen/style.scss
+++ b/frontend/src/containers/CourseScreen/style.scss
@@ -2,6 +2,7 @@
 
 .course-wrapper {
 	display: flex;
+	flex-direction: row;
 	margin-top: 110px;
 	margin-left: 40px;
 	margin-right: 40px;
