--- a/frontend/src/containers/Header/style.scss
+++ b/frontend/src/containers/Header/style.scss
@@ -15,7 +15,6 @@ header {
 	position: fixed;
 	top: 0px;
 	left: 0px;
-	height: 130px;
 	width: 100vw;
 	display: flex;
 	flex-direction: column;
@@ -23,6 +22,7 @@ header {
 	border-bottom: 10px solid transparent;
 	border-image: url("../../assets/header-border.png") 30% round;
 	background-color: #333333;
+	// top right bottom left
 	padding: 25px 50px 25px 50px;
 	transition: height 150ms ease-out;
 	letter-spacing: 0.03em;
